--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ button:disabled {
   max-width: 500px;
 
     position: fixed; /* fixed so it stays on top */
-  top: 50%; /* distance from top */
+  top: 30%; /* distance from top */
   left: 50%;
   transform: translateX(-50%); /* horizontal center */
   z-index: 999; /* ensure it's above everything */
@@ -144,4 +144,10 @@ button:disabled {
 
 .result-box button:hover {
   background: #74b9ff;
+}
+.credits {
+  font-size: 12px;
+  color: #888;
+  display: block;
+  margin-top: 10px;
 }
